# SchurVIO

./: CMakeLists.txt  common.h  main.cpp  multi_fusion.h  multi_fusion2.h  type.h  vio_frontend_simulator.cpp  vio_frontend_simulator.h  vio_frontend_simulator1.cpp  vio_frontend_simulator1.h
data_structure/: feature.cpp  feature.h  frame.cpp  frame.h  landmark.cpp  landmark.h  map.cpp  map.h  pool.cpp  pool.h  sliding_window.cpp  sliding_window.h
eskf/: schur_vins.cpp  schur_vins.h
